<resources>
    <string name="app_name">Livesapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Livesapp</string>
    <string name="nav_header_subtitle">livesapp.oficial@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_indicators">Indicators</string>
    <string name="menu_statistics">Statistics</string>

    <string name="home_principal">Home</string>
    <string name="menu_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="live">Live</string>
    <string name="safe">Safe...</string>
    <string name="sign_in">Sign In</string>
    <string name="live_safe">Live safe.....</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="gender">Gender:</string>
    <string name="create_account">Create an account</string>
    <string name="start">Start</string>

    //Facebook API
    <string name="facebook_app_id">719560682122675</string>
    <string name="fb_login_protocol_scheme">fb719560682122675</string>
    <string name="menu_logout">Logout</string>
    <string name="login">Login</string>
    <string name="reset_the_password">Reset my password</string>
    <string name="create_an_account">Create an account</string>

    //Strings for login
    <string name="login_successful">Login successful</string>
    <string name="livesapp_user">livesappUser</string>
    <string name="valid_account">Enter a valid account</string>
    <string name="enter_email_valid">Enter an E-Mail Address</string>
    <string name="enter_pass_valid">Enter a Password, minimum 7 characters</string>
    <string name="enter_pass">Enter a Password</string>
    <string name="verify_email">Verify Email</string>
    <string name="email_send">Email send, check your Email for change the password</string>
    <string name="ok">ok</string>
    <string name="invalid_email">Invalid email isn\'t registered, try again!</string>
    <string name="enter_email_continue">Introduce a valid email for continue</string>
    <string name="error">Error</string>
    <string name="email_livesapp">livesapp@support.com</string>
    <string name="logout_successful">Logout successful</string>

    //String for Sign in
    <string name="user_register_successful">User register successful</string>
    <string name="try_again">Try again!</string>
    <string name="complete_to_continue">Complete to continue</string>

    //Add new incidence
    <string name="picture">Picture....</string>
    <string name="location">Location....</string>
    <string name="date">Date....</string>
    <string name="save">Save</string>
    <string name="title_activity_maps">Map</string>
    <string name="format_dateTime">MMM dd, YYYY HH:mm a</string>
    <string name="label_show_preview">Show a preview</string>
    <string name="label_no_image">No image</string>
    <string name="var_boudle_addresslocation">addressLocation</string>
    <string name="var_boudle_longitudelocation">longitudeLocation</string>
    <string name="var_boudle_latitudelocation">latitudeLocation</string>
    <string name="failed_to_savechanges">failed please complete the required fields</string>
    <string name="Ok_button">OK</string>
    <string name="Cancel_button">CANCEL</string>
    <string name="fields_required">Fields required</string>
    <string name="save_data">Save data</string>
    <string name="save__button_successful">Save successful!</string>
    <string name="confirmation_save_newincidence">Are you sure to save new incidence</string>
    <string name="error_upload_image">Error get Image try again</string>
    <string name="cancel_button">Cancel for the user</string>
    <string name="transation_cancel">Transaction is cancel!</string>


</resources>
