<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_indicators"
            android:icon="@drawable/ic_indicator"
            android:title="@string/menu_indicators" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_statistic"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_settings"/>
    </group>
</menu>
