<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.aptivist.livesapp.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.aptivist.livesapp.ui.profile.ProfileFragment"
        android:label="@string/home_principal"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_profile" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_indicators"
        android:name="com.aptivist.livesapp.ui.indicator.SettingFragment"
        android:label="@string/menu_indicators"
        tools:layout="@layout/fragment_indicator" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.aptivist.livesapp.ui.statistic.StatisticFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistic" />
</navigation>