<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="startVM"
            type="com.aptivist.livesapp.ui.start.StartViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhiteText"
        tools:context=".ui.start.StartActivity">

        <ImageView
            android:id="@+id/imgMainScreen"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background_image" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgMainScreen">

            <TableRow
                android:id="@+id/tableRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtStartName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/live_safe"
                    android:textSize="35sp" />

                <ImageView
                    android:id="@+id/imgStartLogo"
                    android:layout_width="100dp"
                    android:layout_height="99dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/logosz" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glStartButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorButtonYellow"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/login"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/btnSignin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorButtonRed"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/sign_in"
                    android:textSize="25sp" />

            </TableRow>
        </TableLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>