<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModelLogin"
            type="com.aptivist.livesapp.ui.signin.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.signin.LoginActivity">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="70dp"
                app:cardElevation="3dp">

                <TextView
                    android:id="@+id/txtSigninRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="96dp"
                    android:layout_height="93dp"
                    android:layout_gravity="right"
                    android:background="@drawable/register_user" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtPlataformLogin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@{viewModelLogin.plataformType}">
                    </com.google.android.material.textview.MaterialTextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        app:startIconDrawable="@drawable/ic_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtSigninEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"></com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        app:endIconMode="password_toggle"
                        app:hintAnimationEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtSigninPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"></com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnLogin"
                            style="@style/Widget.MaterialComponents.Button.Icon"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="5sp"
                            android:gravity="center"
                            android:text="@string/login"
                            app:cornerRadius="5sp"
                            app:icon="@drawable/ic_next"
                            app:iconGravity="end"
                            ></com.google.android.material.button.MaterialButton>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.facebook.login.widget.LoginButton
                            android:id="@+id/btnLoginFacebookLogin"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/colorPrimary"
                            android:layout_marginTop="5sp"
                            android:text="login"
                            android:layout_marginBottom="20sp"
                            android:textSize="17sp"></com.facebook.login.widget.LoginButton>
                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_marginTop="10sp"
                        android:layout_marginBottom="10sp">
                        <View
                            android:id="@+id/divider2"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_gravity="center"
                            android:background="@color/colorPrimary" />
                        <TextView
                            android:id="@+id/txtResetPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:text="@string/reset_the_password">
                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_marginBottom="10sp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnCreateAccount"
                            style="@style/Widget.MaterialComponents.Button.Icon"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="5sp"
                            android:gravity="center"
                            android:text="@string/create_an_account"
                            app:cornerRadius="5sp"
                            app:icon="@drawable/ic_next"
                            app:iconGravity="end"
                            ></com.google.android.material.button.MaterialButton>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:orientation="horizontal"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/theme_signin_bottom"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>